--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -54,6 +54,11 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        env:
+          TRADUORA_API_CLIENT_ID: ${{ secrets.TRADUORA_API_CLIENT_ID }}
+          TRADUORA_API_CLIENT_SECRET: ${{ secrets.TRADUORA_API_CLIENT_SECRET }}
+          TRADUORA_API_PROJECT_ID: ${{ secrets.TRADUORA_API_PROJECT_ID }}
+          TRADUORA_API_URL: ${{ secrets.TRADUORA_API_URL }}
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
