--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -64,3 +64,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args:
+            - TRADUORA_API_CLIENT_ID
+            - TRADUORA_API_CLIENT_SECRET
+            - TRADUORA_API_PROJECT_ID
+            - TRADUORA_API_URL
