--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
-    "knex": "^0.21.20",
+    "knex": "0.95.9",
     "node-fetch": "^2.6.1"
   },
   "scripts": {
