--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "knex": "0.95.9",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.1"
   },
   "scripts": {
