Add birthday congratulations & some fixes
Change command name for timezones
Add modifyNotification
Change db migrates

Co-Authored-By: Philipp <PplusSinfo@gmail.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "no-unused-vars": ["warn"],
         "prefer-const": ["warn"],
         "comma-dangle": ["error", "always-multiline"],
-        "object-shorthand": ["warn", "always"]
+        "object-shorthand": ["warn", "always"],
+        "semi": ["error", "never"]
     }
 }
