--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
-    "knex": "0.95.9",
+    "knex": "^0.21.21",
     "luxon": "^2.0.2",
     "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1"
