--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "knex": "^0.21.21",
     "luxon": "^2.0.2",
     "mysql2": "^2.3.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "topgg-autoposter": "^2.0.0"
   },
   "scripts": {
     "start": "node src/index.js",
