--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "download_locales": "node download_locales.js"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "sqlite3": "^5.0.2"
+    "eslint": "^7.32.0"
   }
 }
